<resources>
    <string name="app_name">GroceryPlanning</string>
    <string name="title_home">Cupones</string>
    <string name="title_dashboard">Ofertas</string>
    <string name="title_notifications">Buscar</string>
    <string name="CuponDetail">Cupon</string>
    <string name="OfertaDetail">Oferta</string>
    <string name="ofertas">Ofertas</string>
    <string name="buscar">Buscar</string>
    <string name="Cupones">Cupones</string>
    <string name="producto">producto</string>
    <string name="porcentaje">porcentaje</string>
    <string name="supermercado">supermercado</string>
    <string name="disponibilidad">disponibilidad</string>
    <string name="tipo">tipo</string>
    <string name="nombre">nombre</string>
    <string name="descripcion">descripcion</string>

</resources>