<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde" >

    <TextView
        android:id="@+id/porcentaje"
        android:layout_width="108dp"
        android:layout_height="52dp"
        android:background="#EAE3E3"
        android:text="@string/porcentaje"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/producto"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:background="#EFEAEA"
        android:text="@string/producto"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/supermercado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/supermercado"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_marginBottom="76dp"
        android:background="#EAE4E4"
        android:text="@string/supermercado"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/disponibilidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/disponibilidad"
        android:layout_width="118dp"
        android:layout_height="57dp"
        android:layout_marginBottom="300dp"
        android:background="#EAE2E2"
        android:text="@string/disponibilidad"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>