<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:backgroundTint="@color/blanquito"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="118dp">

        <TextView
            android:id="@+id/producto"
            android:layout_width="139dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.448"
            card_view:layout_constraintStart_toEndOf="@+id/porcentaje"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.168"
            tools:text="@string/producto" />

        <TextView
            android:id="@+id/porcentaje"
            android:layout_width="218dp"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:padding="8dp"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/supermercado"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.428"
            tools:text="@string/porcentaje" />

        <TextView
            android:id="@+id/supermercado"
            android:layout_width="178dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.853"
            tools:text="@string/supermercado" />

        <TextView
            android:id="@+id/disponibilidad"
            android:layout_width="140dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/producto"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/disponibilidad" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>